# guacamole

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  gu.plan.md
.cursor/rules/: clean-code.mdc  dev-rules.mdc
_data/: README.md
_data/guacamole/: guacamole.properties
_data/guacd/record/WEB-INF/: web.xml
_data/postgres/: 01_create_guacamole_db.sql
_data/tomcat/conf/Catalina/localhost/: recordings.xml
env_files/: guacamole.env  pgadmin.env  postgres.env
nginx/: nginx.conf
nginx/conf.d/: default.conf
services/webapi/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  setup.sh
services/webapi/alembic/: README  env.py
services/webapi/alembic/versions/: 0001_init_guacamole_schema.py  0002_seed_guacadmin.py
services/webapi/app/: __init__.py  main.py
services/webapi/app/api/v1/: router.py
services/webapi/app/api/v1/endpoints/: attributes.py  auth.py  connections.py  groups.py  history.py  permissions.py  recordings.py  sessions.py  sharing_profiles.py  users.py
services/webapi/app/core/: config.py  middleware.py
services/webapi/app/db/: base.py  session.py
services/webapi/app/models/guac/: __init__.py  attributes.py  connection.py  connection_group.py  connection_parameter.py  entity.py  enums.py  history.py  permissions.py  sharing_profile.py  sharing_profile_parameter.py  user.py  user_group.py  user_group_member.py
services/webapi/app/repositories/: connections.py  permissions.py  sharing_profiles.py  user_groups.py  users.py
services/webapi/app/security/: deps.py  jwt.py  passwords.py
services/webapi/tests/: __init__.py  test_migrations.py  test_passwords.py
