[tool.poetry]
name = "spacer-webapi"
version = "0.1.0"
description = "Spacer Web API Service"
authors = ["Spacer Team <admin@spacer.local>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
httpx = "^0.28.0"
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ruff = "^0.6.0"
pytest-xdist = "^3.5.0"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["migrations", "alembic", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RET", # flake8-return
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C90", # McCabe complexity
    "DJ",  # flake8-django
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "INT", # flake8-gettext
    "LOG", # flake8-logging
    "NPY", # NumPy-specific rules
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "W",   # pycodestyle warnings (already included)
    "YTT", # flake8-2020
    "PERF", # Perflint
    "FURB", # refurb
    "LOG",  # flake8-logging (already included)
    "AIR",  # flake8-airflow
]
ignore = [
    "S101", # assert in tests is ok
    "S104", # bindir in Dockerfile is ok
    "PLR0913", # too many arguments, but this is a web framework
    "PLR0912", # too many branches, but this is a web framework
    "EM101", # Exception must not use a string literal
    "EM102", # Exception must not use an f-string literal
    "TRY003", # Avoid specifying long messages outside exception class
    "COM812", # Trailing comma missing
    "ISC001", # Implicitly concatenated string literals
    "Q000", # Single quotes found but double quotes preferred
    "Q001", # Single quote multiline found but double quotes preferred
    "Q002", # Single quote docstring found but double quotes preferred
    "Q003", # Change outer quotes to avoid escaping inner quotes
    "E203", # whitespace before ':'
    "E501", # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert in tests is ok
"*/migrations/*" = ["E501"]  # long lines in migrations are ok
"alembic/*" = ["E501"]  # long lines in alembic are ok

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pre-commit.hooks]
black = { name = "Black", entry = "black", language = "system", files = '\.pyi?$', exclude = 'alembic/.*\.py|tests/.*\.py' }
isort = { name = "isort", entry = "isort", language = "system", files = '\.pyi?$' }
ruff = { name = "Ruff", entry = "ruff check", language = "system", files = '\.pyi?$' }
ruff-format = { name = "Ruff Format", entry = "ruff format", language = "system", files = '\.pyi?$' }
mypy = { name = "MyPy", entry = "mypy", language = "system", files = '\.pyi?$' }
pytest = { name = "pytest", entry = "pytest", language = "system", files = 'tests/.*\.py$' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203", # whitespace before ':' (Black-compatible)
    "E501", # line too long (handled by Black)
]
exclude = [
    "alembic",
    "*/migrations/*",
    "__pycache__",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "app.models.guac.*",
    "app.api.v1.endpoints.*",
    "app.repositories.*",
    "app.core.*",
    "app.core.middleware",
    "app.main",
    "alembic.*",
    "tests.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
